--- a/src/components/NavList/NavList.css
+++ b/src/components/NavList/NavList.css
@@ -34,13 +34,32 @@ nav {
   color: rgba(255, 255, 255, 0.85);
   font-family: D-DIN-Regular;
   font-size: 20px;
+  position: relative;
+  color: #fff;
+  text-decoration: none;
 }
 
-.nav-links:hover {
-  color: rgba(255, 255, 255, 1);
-  font-family: D-DIN-Regular;
-  font-size: 20px;
+/*To animate underline on hover*/
+
+.nav-links:hover::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #fff;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
 }
+
+.nav-links:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
+/*------------------*/
 
 .hamburger-toggle {
   cursor: pointer;
