--- a/src/containers/History/History.css
+++ b/src/containers/History/History.css
@@ -42,7 +42,7 @@
   word-wrap: normal;
 }
 .hover-button {
-  background-color: rgb(92, 49, 133);
+  background-color: #4681f4;
   padding: 10px;
   border-radius: 10%;
   cursor: pointer;
