--- a/src/containers/History/HistoryItem/HistoryItem.css
+++ b/src/containers/History/HistoryItem/HistoryItem.css
@@ -10,7 +10,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: rgb(219, 216, 216);
+  background-color: rgb(159 132 132);
   border-radius: 2rem;
   text-align: center;
   overflow: hidden;
