--- a/src/containers/HomePages/cards/Cards.css
+++ b/src/containers/HomePages/cards/Cards.css
@@ -98,6 +98,7 @@ h1 {
 
 .cards__item__text {
   color: #252e48;
+  font: 20px/38px D-DIN-Medium, Arial, Verdana, sans-serif;
   font-size: 18px;
   line-height: 24px;
 }
