--- a/src/containers/Rockets/Rockets.css
+++ b/src/containers/Rockets/Rockets.css
@@ -6,8 +6,8 @@
 
 .rocket-container {
   background: #000000;
-  /* max-width: 900px; */
-  max-width: 100%;
+  /* max-width: 1300px; */
+  /* max-width: 100%; */
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -19,7 +19,7 @@
   display: flex;
   justify-content: flex-start;
 }
-.rockets-divi {
+.rockets-division {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -108,7 +108,7 @@
   .filter-div {
     width: 10px;
   }
-  .rockets-divi {
+  .rockets-division {
     width: 98%;
   }
 }
