frat(ui) : adding date format

--- a/src/containers/History/History.css
+++ b/src/containers/History/History.css
@@ -28,6 +28,7 @@
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
   cursor: pointer;
+  font-family: sans-serif;
 }
 
 .left-card:hover {
