--- a/src/containers/History/HistoryItem/HistoryItem.css
+++ b/src/containers/History/HistoryItem/HistoryItem.css
@@ -21,10 +21,13 @@
 }
 button a {
   text-decoration: none;
-  color: rgb(0, 0, 0);
+  color: #fff;
+  font: initial;
 }
 button {
   padding: 5px;
+  background-color: rgb(62, 63, 60);
+  border-radius: 0.2rem;
 }
 button:hover {
   transform: scale(1.52);
