--- a/src/components/NavList/NavList.css
+++ b/src/components/NavList/NavList.css
@@ -96,7 +96,7 @@ nav {
     align-items: center;
     width: 100%;
     top: 8vh;
-    background-color: #0367a6;
+    background-color: #7a7c7e;
     font-size: 32px;
     transform: translateX(100%);
     transition: transform 0.5s ease-in;
