--- a/src/containers/History/History.css
+++ b/src/containers/History/History.css
@@ -19,7 +19,7 @@
 .left-card {
   height: 200px;
   width: 250px;
-  background-color: #b8412d;
+  background-color: #f2f2;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -43,7 +43,7 @@
   word-wrap: normal;
 }
 .hover-button {
-  background-color: #4681f4;
+  background-color: #0a41c5;
   padding: 10px;
   border-radius: 10%;
   cursor: pointer;
