--- a/src/components/ErrorBoundary/AppCrash.css
+++ b/src/components/ErrorBoundary/AppCrash.css
@@ -1,21 +1,33 @@
 .container {
-  color: #fff;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: rgb(158 158 110);
-  height: 713px;
+  color: #fff;
+  background-color: #007dc6;
+  height: 100vh;
 }
 
 .error-btn {
   cursor: pointer;
   font-family: sans-serif;
-  background-color: darkblue;
+  background-color: grey;
   color: #fff;
   border-radius: 3px;
   padding: 10px;
+  font-size: 14px;
+  font-weight: 500;
+  margin: 10px;
 }
 
-.error-info-btn {
+.error-description {
   font-family: sans-serif;
+  background: #ffffff;
+  color: grey;
+  font-size: 11px;
+  width: 60vw;
+  max-height: 250px;
+  overflow: auto;
+  padding: 10px;
+  margin: 10px;
 }
