--- a/src/containers/Rockets/Rockets.css
+++ b/src/containers/Rockets/Rockets.css
@@ -6,8 +6,6 @@
 
 .rocket-container {
   background: #000000;
-  /* max-width: 1300px; */
-  /* max-width: 100%; */
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -18,6 +16,7 @@
 .filter-div {
   display: flex;
   justify-content: flex-start;
+  margin: 10px;
 }
 .rockets-division {
   display: flex;
@@ -52,24 +51,12 @@
   left: 0px;
   width: 100%;
   height: 100%;
-  z-index: 2;
   background-color: #000;
-  transition: 0.5s;
 }
 
 .rocket-image img {
   width: 100%;
   height: 100%;
-}
-
-.rocket-image:hover img {
-  opacity: 0.4;
-  transition: 0.5s;
-}
-
-.rocket-card:hover .rocket-image {
-  transform: translateY(-100px);
-  transition: all 0.9s;
 }
 
 .rocket-details {
