--- a/src/containers/Rockets/Rockets.css
+++ b/src/containers/Rockets/Rockets.css
@@ -51,12 +51,24 @@
   left: 0px;
   width: 100%;
   height: 100%;
+  z-index: 2;
   background-color: #000;
+  transition: 0.5s;
 }
 
 .rocket-image img {
   width: 100%;
   height: 100%;
+}
+
+.rocket-image:hover img {
+  opacity: 0.4;
+  transition: 0.5s;
+}
+
+.rocket-card:hover .rocket-image {
+  transform: translateY(-100px);
+  transition: all 0.9s;
 }
 
 .rocket-details {
